--- a/src/styles.scss
+++ b/src/styles.scss
@@ -586,7 +586,7 @@ button.mat-mdc-menu-trigger {
     background-color: transparent !important;
     border: none !important;
     line-height: normal !important;
-    margin-top: 10px !important;
+    margin-top: 0 !important;
     display: block !important;
     overflow: hidden !important;
   }
